tests/fixtures/guardrails/invalid/split-fetch-direct-admin-access/scripts/backfill.mjs
export async function runBackfill() {
  return fetch("/admin" + "/api/2026-01/graphql.json");
}
